contact form spacing fix

--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -227,6 +227,7 @@
     }
     .__shecode_contactform {
         width: 100%;
+        margin: 0;
     }
     .contact_section {
         width: 100%;
